Annoucement wording update

--- a/client/src/app/views/welcome/welcome.component.html
+++ b/client/src/app/views/welcome/welcome.component.html
@@ -54,7 +54,7 @@
                 </span>
               </nz-list-item-meta-title>
             </nz-list-item-meta>
-            We're excited to announce that CIViC, the Compendium of Cancer Genome Aberrations (CCGA), and the ClinGen Clinical Domain Working Group are co-hosting a cancer
+            We're excited to announce that CIViC, the Compendium of Cancer Genome Aberrations (CCGA), and the ClinGen Somatic Cancer Clinical Domain Working Group are co-hosting a cancer
             variant interpretation hackathon and curation jamboree on Saturday July 30 (8AM to 5PM) as a pre-meeting of the CGC Annual Meeting 2022.
             <a href="https://www.eventbrite.com/e/cancer-variant-interpretation-hackathon-and-curation-jamboree-tickets-327320021997" target="_blank">Register now!</a>
             <nz-list-item-extra></nz-list-item-extra>
