--- a/client/src/app/layout/layout.component.html
+++ b/client/src/app/layout/layout.component.html
@@ -180,6 +180,18 @@
               <a routerLink="/curation/queues">Queues</a>
             </span>
           </li>
+          <li nz-menu-item
+            nz-tooltip
+            nzTooltipPlacement="right"
+            [nzTooltipTitle]="isCollapsed ? 'Search' : ''"
+            nzSelected
+            nzMatchRouter>
+            <i nz-icon
+              nzType="search"></i>
+            <span>
+              <a routerLink="/curation/search">Search</a>
+            </span>
+          </li>
         </ul>
       </li>
       <li nz-menu-group
