add autofocus directive and apply to tag input style form elements

--- a/client/src/app/forms/config/types/disease-input/disease-input.type.html
+++ b/client/src/app/forms/config/types/disease-input/disease-input.type.html
@@ -1,6 +1,7 @@
 <ng-container *ngIf="!formControl.value?.id; else diseaseListItem">
   <nz-select nzShowSearch
     nzServerSearch
+    autofocus="click"
     [formControl]="formControl"
     [formlyAttributes]="field"
     [nzPlaceHolder]="!to.placeholder ? null : to.placeholder"
