--- a/client/src/app/forms/config/types/source-input/source-selector/source-selector-typeahead/source-selector-typeahead.type.html
+++ b/client/src/app/forms/config/types/source-input/source-selector/source-selector-typeahead/source-selector-typeahead.type.html
@@ -1,5 +1,6 @@
 <nz-select nzShowSearch
   nzServerSearch
+  autofocus="click"
   [formControl]="formControl"
   [formlyAttributes]="field"
   (ngModelChange)="to.modelChange($event)"
