--- a/client/src/app/forms/config/types/tag-input/tag-input.type.html
+++ b/client/src/app/forms/config/types/tag-input/tag-input.type.html
@@ -1,5 +1,6 @@
 <ng-container *ngIf="!formControl.value; else tagItem">
   <input nz-input
+    autofocus="focus"
     [formControl]="formControl"
     [formlyAttributes]="field"
     (keydown.enter)="onEnter($event)"/>
