--- a/client/src/app/forms/config/types/variant-input/variant-input.type.html
+++ b/client/src/app/forms/config/types/variant-input/variant-input.type.html
@@ -1,6 +1,7 @@
 <ng-container *ngIf="!formControl.value?.id; else variantListItem">
   <nz-select nzShowSearch
     nzServerSearch
+    autofocus="click"
     [formControl]="formControl"
     [formlyAttributes]="field"
     [nzPlaceHolder]="!to.placeholder ? null : to.placeholder"
