--- a/client/src/app/views/diseases/diseases-detail/diseases-summary/diseases-summary.component.html
+++ b/client/src/app/views/diseases/diseases-detail/diseases-summary/diseases-summary.component.html
@@ -1,8 +1,33 @@
-<nz-space nzSize="middle" *ngIf="diseaseId" nzDirection="vertical" class="space-align-block">
-
-  <!-- assertions table card -->
-  <cvc-assertions-table [diseaseId]="diseaseId" cvcTitle="Disease Assertions" *nzSpaceItem></cvc-assertions-table>
-
-  <!-- evidence table card -->
-  <cvc-evidence-table [diseaseId]="diseaseId" cvcTitle="Disease Evidence" *nzSpaceItem></cvc-evidence-table>
-</nz-space>
+<div class="summary-container">
+  <ng-container *ngIf="disease$ | ngrxPush as disease">
+    <nz-row [nzGutter]="[8,16]">
+      <nz-col [nzSpan]="24">
+       <!-- disease aliases -->
+        <nz-descriptions nzSize="small"
+          [nzColumn]="2"
+          nzBordered="true">
+          <nz-descriptions-item nzTitle="Aliases">
+            <ng-container *ngIf="disease.diseaseAliases.length > 0; else noAliases">
+              {{ disease.diseaseAliases.join(", ") }}
+            </ng-container>
+            <ng-template #noAliases>
+              <span nz-typography
+                nzType="secondary">None specified.</span>
+            </ng-template>
+          </nz-descriptions-item>
+        </nz-descriptions>
+      </nz-col>
+      <!-- disease evidence table -->
+      <nz-col [nzSpan]="24">
+        <cvc-evidence-table [diseaseId]="diseaseId"
+          cvcHeight="400px"
+          cvcTitle="{{disease.displayName}} Evidence"></cvc-evidence-table>
+      </nz-col>
+      <!-- disease assertions table -->
+      <nz-col [nzSpan]="24">
+        <cvc-assertions-table [diseaseId]="diseaseId"
+          cvcTitle="{{disease.displayName}} Assertions"></cvc-assertions-table>
+      </nz-col>
+    </nz-row>
+  </ng-container>
+</div>
