--- a/client/src/app/views/evidence/evidence-detail/evidence-summary/evidence-summary.page.html
+++ b/client/src/app/views/evidence/evidence-detail/evidence-summary/evidence-summary.page.html
@@ -4,7 +4,7 @@
     <nz-col [nzSpan]="12">
       <nz-row [nzGutter]="[8,8]">
 
-        <!-- 1ST BLOCK: evidence description -->
+        <!-- BLOCK: evidence description -->
         <nz-col [nzSpan]="24">
           <nz-descriptions nzLayout="vertical"
             nzSize="small"
@@ -19,10 +19,10 @@
           </nz-descriptions>
         </nz-col>
 
-        <!-- 2ND BLOCK: type, direction, level, rating-->
+        <!-- BLOCK: type, direction, level, rating-->
         <nz-col [nzSpan]="24">
           <nz-descriptions nzSize="small"
-            [nzColumn]="3"
+            [nzColumn]="2"
             nzBordered="true">
 
             <!-- evidence type -->
@@ -54,31 +54,21 @@
           </nz-descriptions>
         </nz-col>
 
-        <!-- BLOCK: source & clinical trials -->
+        <!-- BLOCK: gene, variant, variant origin -->
         <nz-col [nzSpan]="24">
           <nz-descriptions nzSize="small"
-            nzBordered="true"
-            [nzColumn]="1">
-            <!-- source -->
-            <nz-descriptions-item nzTitle="Source"
-              nzSpan="2">
-              <cvc-source-tag [source]="evidence.source"> </cvc-source-tag>
+            [nzColumn]="2"
+            nzBordered="true">
+            <nz-descriptions-item nzTitle="Gene">
+              <cvc-gene-tag [gene]="evidence.gene"></cvc-gene-tag>
             </nz-descriptions-item>
-
-            <!-- clinical trials -->
-            <nz-descriptions-item [nzTitle]="evidence.source.clinicalTrials.length > 1 ? 'Clinical Trials' : 'Clinical Trial'">
-              <ng-container *ngIf="evidence.source.clinicalTrials.length > 0">
-                <ng-container *ngFor="let t of evidence.source.clinicalTrials">
-                  <cvc-clinical-trial-tag [clinicalTrial]="t"></cvc-clinical-trial-tag>
-                </ng-container>
-              </ng-container>
-              <ng-container *ngIf="evidence.source.clinicalTrials.length === 0">
-                <span nz-typography
-                  nzType="secondary">None Specified</span>
-              </ng-container>
+            <nz-descriptions-item nzTitle="Variant">
+              <cvc-variant-tag [variant]="evidence.variant"></cvc-variant-tag>
+            </nz-descriptions-item>
+            <nz-descriptions-item nzTitle="Variant Origin">
+              {{ evidence.variantOrigin | evidenceEnumDisplay }}
             </nz-descriptions-item>
           </nz-descriptions>
-
         </nz-col>
       </nz-row>
     </nz-col>
@@ -126,13 +116,38 @@
 
         </nz-col>
 
+        <!-- BLOCK: source & clinical trials -->
+        <nz-col [nzSpan]="24">
+          <nz-descriptions nzSize="small"
+            nzBordered="true"
+            [nzColumn]="1">
+            <!-- source -->
+            <nz-descriptions-item nzTitle="Source"
+              nzSpan="2">
+              <cvc-source-tag [source]="evidence.source"> </cvc-source-tag>
+            </nz-descriptions-item>
+
+            <!-- clinical trials -->
+            <nz-descriptions-item [nzTitle]="evidence.source.clinicalTrials.length > 1 ? 'Clinical Trials' : 'Clinical Trial'">
+              <ng-container *ngIf="evidence.source.clinicalTrials.length > 0">
+                <ng-container *ngFor="let t of evidence.source.clinicalTrials">
+                  <cvc-clinical-trial-tag [clinicalTrial]="t"></cvc-clinical-trial-tag>
+                </ng-container>
+              </ng-container>
+              <ng-container *ngIf="evidence.source.clinicalTrials.length === 0">
+                <span nz-typography
+                  nzType="secondary">None Specified</span>
+              </ng-container>
+            </nz-descriptions-item>
+          </nz-descriptions>
+
+        </nz-col>
 
         <!-- BLOCK: disease, phenotype -->
         <nz-col [nzSpan]="24">
-          <nz-descriptions
-            nzSize="small"
+          <nz-descriptions nzSize="small"
             nzBordered="true"
-            [nzColumn]="1">
+            [nzColumn]="2">
 
             <!-- disease -->
             <nz-descriptions-item nzTitle="Disease">
@@ -163,12 +178,13 @@
           </nz-descriptions>
         </nz-col>
 
-      <!-- 4TH BLOCK: drugs -->
+        <!-- 4TH BLOCK: drugs -->
         <nz-col [nzSpan]="24">
-          <nz-descriptions nzLayout="vertical"
+          <nz-descriptions nzLayout="horizontal"
             nzSize="small"
-            nzBordered="true">
-            <nz-descriptions-item [nzTitle]="drugsTitle">
+            nzBordered="true"
+            [nzColumn]="1">
+            <nz-descriptions-item [nzTitle]="evidence.drugs.length > 1 ? 'Drugs' : 'Drug'">
               <ng-container [ngPlural]="evidence.drugs.length">
                 <!-- no drug -->
                 <ng-template ngPluralCase="=0">
@@ -186,20 +202,10 @@
                 </ng-template>
               </ng-container>
 
-              <!-- drug description title template -->
-              <ng-template #drugsTitle>
-                <ng-container [ngPlural]="evidence.drugs.length">
-                  <ng-template ngPluralCase="=0">
-                    Drug
-                  </ng-template>
-                  <ng-template ngPluralCase="=1">
-                    Drug
-                  </ng-template>
-                  <ng-template ngPluralCase="other">
-                    Drugs ({{ evidence.drugInteractionType | titlecase }})
-                  </ng-template>
-                </ng-container>
-              </ng-template>
+            </nz-descriptions-item>
+            <nz-descriptions-item *ngIf="evidence.drugInteractionType"
+              nzTitle="Drug Interaction Type">
+              {{ evidence.drugInteractionType | titlecase }}
             </nz-descriptions-item>
           </nz-descriptions>
         </nz-col>
