better interface for attribute-tag & tooltip pipe

--- a/client/src/app/components/shared/attribute-tag/attribute-tag.component.html
+++ b/client/src/app/components/shared/attribute-tag/attribute-tag.component.html
@@ -1,5 +1,6 @@
 <nz-tag>
   <i nz-icon
-    [nzType]="cvcAttribute | evidenceEnumDisplay: 'icon-name'"></i>
-  {{ cvcAttribute | evidenceEnumDisplay }}
+    [nzType]="cvcAttribute[0] | evidenceEnumDisplay: 'icon-name'"
+    ></i>
+  {{ cvcAttribute[0] | evidenceEnumDisplay }}
 </nz-tag>
