refactored gene-summary page nzSpace -> nz-row/col

--- a/client/src/app/views/assertions/assertions-detail/assertions-summary/assertions-summary.page.html
+++ b/client/src/app/views/assertions/assertions-detail/assertions-summary/assertions-summary.page.html
@@ -287,8 +287,7 @@
             </nz-descriptions-item>
 
             <!-- NCCN guideline -->
-            <nz-descriptions-item nzTitle="NCCN Guideline"
-              nzSpan="2">
+            <nz-descriptions-item nzTitle="NCCN Guideline">
               <ng-container *ngIf="assertion.nccnGuideline">{{ assertion.nccnGuideline.name }} ({{
                         assertion.nccnGuidelineVersion}})</ng-container>
               <ng-container *ngIf="!assertion.nccnGuideline">
