--- a/client/src/app/views/evidence/evidence-detail/evidence-summary/evidence-summary.page.html
+++ b/client/src/app/views/evidence/evidence-detail/evidence-summary/evidence-summary.page.html
@@ -103,7 +103,7 @@
       </nz-row>
     </nz-col>
 
-    <!-- RIGHT COLUMN: evidence details column -->
+    <!-- RIGHT COLUMN: status, related entities -->
     <nz-col [nzSpan]="12">
       <nz-row [nzGutter]="[8,8]">
         <!-- BLOCK: status, curation events -->
