add oncogenic rules to assertion table filtering

--- a/client/src/app/components/assertions/assertions-table/assertions-table.component.html
+++ b/client/src/app/components/assertions/assertions-table/assertions-table.component.html
@@ -171,6 +171,8 @@
               nzLabel="Diagnostic"></nz-option>
             <nz-option nzValue="PREDISPOSING"
               nzLabel="Predisposing"></nz-option>
+            <nz-option nzValue="ONCOGENIC"
+              nzLabel="Oncogenic"></nz-option>
           </nz-select>
         </th>
         <th nzRight
@@ -228,6 +230,18 @@
                 nzLabel="Pathogenic"></nz-option>
               <nz-option nzValue="LIKELY_PATHOGENIC"
                 nzLabel="Likely Pathogenic"></nz-option>
+              <nz-option nzValue="BENIGN"
+                nzLabel="Benign"></nz-option>
+              <nz-option nzValue="LIKELY_BENIGN"
+                nzLabel="Likely Benign"></nz-option>
+              <nz-option nzValue="UNCERTAIN_SIGNIFICANCE"
+                nzLabel="Uncertain Significance"></nz-option>
+            </nz-option-group>
+            <nz-option-group nzLabel="Oncogenic">
+              <nz-option nzValue="ONCOGENIC"
+                nzLabel="Oncogenic"></nz-option>
+              <nz-option nzValue="LIKELY_ONCOGENIC"
+                nzLabel="Likely Oncogenic"></nz-option>
               <nz-option nzValue="BENIGN"
                 nzLabel="Benign"></nz-option>
               <nz-option nzValue="LIKELY_BENIGN"
