add updated predisposing and oncogenicc rules to evidence table filtering

--- a/client/src/app/components/evidence/evidence-table/evidence-table.component.html
+++ b/client/src/app/components/evidence/evidence-table/evidence-table.component.html
@@ -275,10 +275,18 @@
                 nzLabel="Negative"></nz-option>
             </nz-option-group>
             <nz-option-group nzLabel="Predisposing">
+              <nz-option nzValue="PREDISPOSITION"
+                nzLabel="Predisposition"></nz-option>
+              <nz-option nzValue="PROTECTIVENESS"
+                nzLabel="Protectiveness"></nz-option>
               <nz-option nzValue="NA"
                 nzLabel="N/A"></nz-option>
             </nz-option-group>
             <nz-option-group nzLabel="Oncogenic">
+              <nz-option nzValue="ONCOGENICITY"
+                nzLabel="Oncogenicity"></nz-option>
+              <nz-option nzValue="PROTECTIVENESS"
+                nzLabel="Protectiveness"></nz-option>
               <nz-option nzValue="NA"
                 nzLabel="N/A"></nz-option>
             </nz-option-group>
