source summary now displays PubMed/ASCO Id as link-tag

--- a/client/src/app/views/sources/sources-detail/sources-summary/sources-summary.page.html
+++ b/client/src/app/views/sources/sources-detail/sources-summary/sources-summary.page.html
@@ -13,7 +13,11 @@
       <nz-descriptions nzBordered
         [nzColumn]="1">
         <nz-descriptions-item nzTitle="Published">{{ source.publicationDate }}</nz-descriptions-item>
-        <nz-descriptions-item nzTitle="{{source.displayType}} ID">{{ source.citationId }}</nz-descriptions-item>
+        <nz-descriptions-item nzTitle="{{source.displayType}} ID">
+        <cvc-link-tag [href]="source.sourceUrl" [tooltip]="'View on ' + source.displayType">
+            {{ source.displayType + ':' + source.citationId }}
+        </cvc-link-tag>
+        </nz-descriptions-item>
         <nz-descriptions-item nzTitle="Journal">{{ source.fullJournalTitle }}</nz-descriptions-item>
         <nz-descriptions-item nzTitle="PMC ID">
           <ng-container *ngIf="source.pmcId; else notAvailable">
