source summary, table layout improvements

--- a/client/src/app/components/sources/sources-table/sources-table.component.html
+++ b/client/src/app/components/sources/sources-table/sources-table.component.html
@@ -144,7 +144,7 @@ j     [nzExtra]="extraTemplate"
         let-index="index">
         <tr class="data-row">
           <td nzLeft>
-            <cvc-source-tag [source]="source"></cvc-source-tag>
+            <cvc-source-tag [source]="source" [truncateLongName]="true"></cvc-source-tag>
           </td>
           <td class="overflow-ellipsis"
             nz-tooltip
