--- a/client/src/app/views/clinical-trials/clinical-trials-detail/clinical-trials-summary/clinical-trials-summary.component.html
+++ b/client/src/app/views/clinical-trials/clinical-trials-detail/clinical-trials-summary/clinical-trials-summary.component.html
@@ -1,10 +1,22 @@
-<nz-row [nzGutter]="[8, 16]">
-  <nz-col [nzSpan]="24">
-    <cvc-sources-table [clinicalTrialId]="clinicalTrialId"
-      cvcTitle="Clinical Trial Sources" [cvcHeight]="400"></cvc-sources-table>
-  </nz-col>
-  <nz-col [nzSpan]="24">
-    <cvc-evidence-table [clinicalTrialId]="clinicalTrialId"
-      cvcTitle="Clinical Trial Evidence"></cvc-evidence-table>
-  </nz-col>
-</nz-row>
+<ng-container *ngIf="clinicalTrial$ | ngrxPush as trial">
+  <nz-row [nzGutter]="[8, 16]">
+    <nz-col [nzSpan]="24">
+      <nz-descriptions nzLayout="vertical" nzSize="small"
+        [nzBordered]="true">
+        <nz-descriptions-item nzTitle="Description">
+          {{ trial.description }}
+        </nz-descriptions-item>
+      </nz-descriptions>
+    </nz-col>
+    <nz-col [nzSpan]="24">
+      <cvc-sources-table [clinicalTrialId]="clinicalTrialId"
+        cvcTitle="{{ trial.nctId }} Sources"
+        [cvcHeight]="400">
+      </cvc-sources-table>
+    </nz-col>
+    <nz-col [nzSpan]="24">
+      <cvc-evidence-table [clinicalTrialId]="clinicalTrialId"
+        cvcTitle="{{ trial.nctId }} Evidence"></cvc-evidence-table>
+    </nz-col>
+  </nz-row>
+</ng-container>
