moved variant coordinates card into its own component

--- a/client/src/app/components/layout/quicksearch/quicksearch-component.html
+++ b/client/src/app/components/layout/quicksearch/quicksearch-component.html
@@ -23,4 +23,11 @@
     <span innerHTML= {{o.result.matchingText}}></span>
     </span>
   </nz-option>
+  <nz-option *ngIf="isLoading$ | ngrxPush"
+    nzDisabled
+    nzCustomContent>
+    <i nz-icon
+      nzType="loading"
+      class="loading-icon"></i> Loading Data...
+  </nz-option>
 </nz-select>
