--- a/client/src/app/components/variants/variants-table/variants-table.component.html
+++ b/client/src/app/components/variants/variants-table/variants-table.component.html
@@ -60,7 +60,7 @@
           Diseases
         </th>
         <th nzWidth="180px">
-          Drugs {{ drugNameInput === undefined ? 'undefined' : drugNameInput }}
+          Drugs
         </th>
         <th nzWidth="75px"
           nzRight
