improved description title styles

--- a/client/src/app/views/sources/sources-detail/sources-summary/sources-summary.page.html
+++ b/client/src/app/views/sources/sources-detail/sources-summary/sources-summary.page.html
@@ -20,7 +20,7 @@
         nzLayout="vertical"
         [nzColumn]="1">
         <nz-descriptions-item nzTitle="Abstract">
-          <p class="abstract" nz-typography
+          <p nz-typography
             nzEllipsis
             nzExpandable
             [nzEllipsisRows]="6">
