--- a/client/src/app/components/shared/icon-badges/icon-badges.component.less
+++ b/client/src/app/components/shared/icon-badges/icon-badges.component.less
@@ -12,23 +12,21 @@
   height: 4px;
   border-radius: 100%;
   box-shadow: 0 0 0 1px #fff;
+  background: #AAA;
 
   &.badge-revisions {
-    background: #f0673a;
-    top: .5px;
-    right: .5px;
+    top: 0.5px;
+    right: 0.5px;
     transform: translate(50%, -50%);
   }
   &.badge-flags {
-    background: #e24759;
-    top: .5px;
-    left: .5px;
+    top: 0.5px;
+    left: 0.5px;
     transform: translate(-50%, -50%);
   }
   &.badge-comments {
-    background: #44d8ef;
-    bottom: .5px;
-    right: .5px;
+    bottom: 0.5px;
+    right: 0.5px;
     transform: translate(50%, 50%);
   }
 }
