--- a/client/src/app/components/variant-groups/variant-group-tag/variant-group-tag.component.html
+++ b/client/src/app/components/variant-groups/variant-group-tag/variant-group-tag.component.html
@@ -5,15 +5,15 @@
 </ng-container>
 
 <ng-template #tag>
-  <nz-tag
-    nz-popover
+  <nz-tag nz-popover
     [nzPopoverMouseEnterDelay]="0.5"
     [nzPopoverContent]="popoverContent"
     [nzPopoverTrigger]="enablePopover ? 'hover' : null">
     <ng-template [ngTemplateOutlet]="tagContent"></ng-template>
   </nz-tag>
   <ng-template #popoverContent>
-    <cvc-variant-group-popover *ngIf="enablePopover" [variantGroupId]="variantgroup.id"></cvc-variant-group-popover>
+    <cvc-variant-group-popover *ngIf="enablePopover"
+      [variantGroupId]="variantgroup.id"></cvc-variant-group-popover>
   </ng-template>
 </ng-template>
 
@@ -22,6 +22,16 @@
 </ng-template>
 
 <ng-template #tagContent>
-  <i nz-icon
-    nzType="civic-variantgroup" nzTheme="twotone" nzTwotoneColor="#33B358"></i> {{ variantgroup.name }}
+  <cvc-icon-badges [hasComments]="false"
+    [hasRevisions]="0.3 | devRandomBool"
+    [hasFlags]="0.1 | devRandomBool"
+    [entityColor]="iconColor">
+    <i nz-icon
+      nzType="civic-variantgroup"
+      nzTheme="twotone"
+      [nzTwotoneColor]="'VariantGroup' | entityColor">
+    </i>
+  </cvc-icon-badges>
+  {{ variantgroup.name }}
+
 </ng-template>
