--- a/client/src/app/components/variants/variant-tag/variant-tag.component.html
+++ b/client/src/app/components/variants/variant-tag/variant-tag.component.html
@@ -24,10 +24,12 @@
 </ng-template>
 
 <ng-template #tagContent>
-  <i nz-icon
-    nzType="civic-variant"
-    nzTheme="twotone"
-    nzTwotoneColor="#33B358"></i>
+  <cvc-icon-badges [hasComments]="false"
+    [hasRevisions]="0.3 | devRandomBool"
+    [hasFlags]="0.1 | devRandomBool"
+    [entityColor]="iconColor">
+    <i nz-icon nzType="civic-variant" nzTheme="twotone" nzTwotoneColor="#33B358"></i>
+</cvc-icon-badges>
   <!-- variant name length mean: 12; mode: 5 (825); max: 68 -->
   <ng-container *ngIf="truncateLongName; else fullName">
     {{ variant.name | truncate: 20}}
