--- a/client/src/app/views/evidence/evidence-home/evidence-home.page.html
+++ b/client/src/app/views/evidence/evidence-home/evidence-home.page.html
@@ -17,7 +17,8 @@
       <nz-col nzFlex="64px"
         class="header-icon">
         <i nz-icon
-          nzType="civic:evidence"></i>
+          nzType="civic-evidence"
+        nzTheme="twotone" [nzTwotoneColor]="'EvidenceItem' | entityColor"></i>
       </nz-col>
       <nz-col nzFlex="600px"
         class="header-description">
