--- a/client/src/app/views/molecular-profiles/molecular-profiles-home/molecular-profiles-home.page.html
+++ b/client/src/app/views/molecular-profiles/molecular-profiles-home/molecular-profiles-home.page.html
@@ -31,11 +31,11 @@
       <nz-col nzFlex="64px"
         class="header-icon">
         <i nz-icon
-          nzType="civic:molecular-profile"></i>
+          nzType="civic:molecularprofile"></i>
       </nz-col>
       <nz-col nzFlex="600px"
         class="header-description">
-        <h2>Variants</h2>
+        <h2>Molecular Profiles</h2>
         <p nz-typography nzEllipsis nzExpandable [nzEllipsisRows]="2">CIViC molecular profiles are... .</p>
       </nz-col>
       <nz-col nzFlex="auto"
