--- a/client/src/app/components/evidence/evidence-table/evidence-table.component.html
+++ b/client/src/app/components/evidence/evidence-table/evidence-table.component.html
@@ -489,7 +489,8 @@
 <!-- card's title template -->
 <ng-template #titleTemplate>
   <i nz-icon
-    nzType="civic:evidence"></i>
+    [nzTwotoneColor]="'EvidenceItem' | entityColor"
+    nzType="civic-evidence"></i>
   <ng-container *ngIf="this.cvcTitleTemplate">
     <ng-template [ngTemplateOutlet]="cvcTitleTemplate"></ng-template>
   </ng-container>
