--- a/client/src/app/components/shared/icon-badges/icon-badges.component.html
+++ b/client/src/app/components/shared/icon-badges/icon-badges.component.html
@@ -1,5 +1,5 @@
 <ng-content></ng-content>
-<div *ngIf="hasFlags"
+<div *ngIf="flagged"
   class="cvc-badge badge-flags"
   [ngStyle]="{ background: flagColor }"></div>
 <div *ngIf="hasRevisions"
